[tool.poetry]
name = "jam-downloader"
version = "0.1.0"
description = "Automated downloader for jam session song charts from Google Docs"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.31.0"
playwright = "^1.40.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
jam-downloader = "jam_downloader:main"