[project]
name = "jam-downloader"
version = "0.1.0"
description = "Automated downloader for jam session song charts from Google Docs"
requires-python = ">=3.8"
dependencies = [
    "requests>=2.31.0",
    "playwright>=1.40.0",
    "google-api-python-client>=2.100.0",
    "google-auth-oauthlib>=1.1.0",
    "pypdf2>=3.0.1",
    "reportlab>=4.4.3",
]

